[metadata]
name = aarch64_experimental_disasm
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = "Experimental methods of decoding/disassembling AArch64 instructions"
version = attr: aarch64_experimental_disasm.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jevinskie/aarch64-experimental-disasm

[options]
python_requires = ~=3.10
packages = find:
zip_safe = True
install_requires =
  anytree
  attrs
  lxml
  lxml-stubs

[options.entry_points]
console_scripts =
  aarch64-dump-instrs = aarch64_experimental_disasm.tools.dump_instrs:main

[build-system]
requires = ["setuptools"]
